--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.1+3
+version: 1.2.0+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -38,7 +38,6 @@ dependencies:
   auto_size_text: ^2.1.0
   mask_text_input_formatter: ^1.2.1
   shared_preferences: ^0.5.12+4
-  date_time_picker: ^1.1.1
   date_text_masked: ^1.0.0
   onesignal_flutter: ^2.6.2
   http: ^0.12.2
@@ -46,6 +45,8 @@ dependencies:
   substring_highlight: ^0.1.2
   shimmer: ^1.1.2
   cached_network_image: ^2.5.0
+  firebase_storage: "^7.0.0"
+  image_picker: ^0.6.7+22
 
   flutter_localizations: # Add this line
     sdk: flutter         # Add this line
