--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.0+4
+version: 1.3.2+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -47,6 +47,7 @@ dependencies:
   cached_network_image: ^2.5.0
   firebase_storage: "^7.0.0"
   image_picker: ^0.6.7+22
+  flutter_staggered_grid_view: ^0.3.4
 
   flutter_localizations: # Add this line
     sdk: flutter         # Add this line
