--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.3.2+8
+version: 1.3.6+12
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -27,30 +27,28 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  get: ^3.24.0
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.0+1
-  line_awesome_icons: ^1.0.4+2
-  cloud_firestore: ^0.16.0
-  url_launcher: ^5.7.10
-  share: ^0.6.5+4
-  auto_size_text: ^2.1.0
-  mask_text_input_formatter: ^1.2.1
-  shared_preferences: ^0.5.12+4
-  date_text_masked: ^1.0.0
+  cupertino_icons: ^1.0.2
+  get: ^4.0.0-nullsafety.2
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
+  firebase_auth_web: ^1.0.2
+  cloud_firestore: ^1.0.1
+  line_icons: ^2.0.1
+  url_launcher: ^6.0.2
+  share: ^2.0.1
+  auto_size_text: ^3.0.0-nullsafety.0
+  mask_text_input_formatter: ^2.0.0-nullsafety.2
+  shared_preferences: ^2.0.4
   onesignal_flutter: ^2.6.2
-  http: ^0.12.2
-  flutter_launcher_icons: ^0.8.1
-  substring_highlight: ^0.1.2
-  shimmer: ^1.1.2
-  cached_network_image: ^2.5.0
-  firebase_storage: "^7.0.0"
-  image_picker: ^0.6.7+22
-  flutter_staggered_grid_view: ^0.3.4
-
-  flutter_localizations: # Add this line
-    sdk: flutter         # Add this line
+  http: ^0.13.0
+  flutter_launcher_icons: ^0.9.0
+  shimmer: ^2.0.0-nullsafety.0
+  cached_network_image: ^3.0.0-nullsafety
+  firebase_storage: ^8.0.0
+  image_picker: ^0.7.2+1
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  flutter_localizations:
+    sdk: flutter
 
 
 dev_dependencies:
